#30 feat (UI): Update and refactor and add config DB mysql